--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 /*Couleur bouton et police bouton*/
 #btncolor {
-  background-color: #ffffff;
+  background-color: #ea4335;
   color: #393939;
 }
 
