--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,29 @@
-/* Début du style de la barre de navigation */
+/* Header */
+#header-wrapper {
+  width: 100%;
+  height: 65vh;
+  background-color: transparent;
+  background-image: url("../imgs/headBackground 1920X911.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 120vh;
+  display: block;
+  position: relative;
+}
+
+#logo {
+  width: 35%;
+  height: 35%;
+}
+
+.titlehead {
+  padding-top: 2rem;
+  text-align: center;
+}
+/* Fin de l'header */
+
+/* Début du style de la barre des onglets*/
 
 .nav {
   background-color: black;
@@ -14,7 +39,7 @@
 }
 
 .nav-pills .nav-link {
-  border-radius: 3rem;
+  border-radius: 0.8rem;
 }
 
 /* geruda moins d'espace mais très lisible ou Avantgarde plus d'espace de police */
@@ -33,4 +58,22 @@ a:hover {
   padding: 0.5rem 4.5rem;
 }
 
-/* Fin du style de la barre */
+#pills-bag-tab {
+
+}
+
+/* Fin du style de la barre des onglets */
+
+@media (max-width: 430px){
+  #header-wrapper {
+    background-size: 100% 30vh;
+    background-position: top;
+    width: 100%;
+    height: 30vh;
+  }
+
+  #logo{
+    width: 60%;
+    height: 60%;
+  }
+}
