--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Header */
 #header-wrapper {
   width: 100%;
-  height: 65vh;
+  height: 50vh;
   background-color: transparent;
   background-image: url("../imgs/headBackground 1920X911.jpg");
   background-position: center;
@@ -60,6 +60,11 @@ a:hover {
 
 #pills-bag-tab {
 
+}
+
+#imgBag {
+  width: 2rem;
+  height: 2rem;
 }
 
 /* Fin du style de la barre des onglets */
