--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
 }
 
 #pills-tab {
-  margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
   top: 3.7rem;
 }
 
@@ -79,21 +79,32 @@ a:hover {
 }
 
 .tab-content {
-  padding-bottom: 3rem;
+  padding-bottom: 2.5rem;
+}
+
+
+.image {
+  background-image: url("../imgs/fondBody.png");
+  background-size: 100% 180vh;
 }
 
 /* Fin du style des barres */
 
 /*Début du style de la feuille de contact*/
 /* Style inputs with type="text", select elements and textareas */
+
+#paddingContact {
+  padding-top: 2rem;
+}
+
 input.names, select, textarea {
    width: 100%; /* Full width */
-   padding: 12px; /* Some padding */
-   border: 1px solid #aed6a4; /* Gray border */
-   border-radius: 4px; /* Rounded borders */
+   padding: 0.75rem; /* Some padding */
+   border: 0.0625rem solid #aed6a4; /* Gray border */
+   border-radius: 0.25rem; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
-   margin-top: 6px; /* Add a top margin */
-   margin-bottom: 16px; /* Bottom margin */
+   margin-top: 0.375rem; /* Add a top margin */
+   margin-bottom: 1rem; /* Bottom margin */
    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
@@ -101,9 +112,9 @@ input.names, select, textarea {
 input[type=submit] {
    background-color: #d11919;
    color: white;
-   padding: 12px 20px;
+   padding: 0.75rem 1.25rem;
    border: none;
-   border-radius: 4px;
+   border-radius: 0.25rem;
    cursor: pointer;
 }
 
@@ -114,10 +125,10 @@ input[type=submit]:hover {
 
 /* Add a background color and some padding around the form */
 .c {
-   border-radius: 5px;
+   border-radius: 0.8rem;
    background-color: #e0ffe0;
-   padding: 20px;
-}
+   padding: 1.5rem;
+ }
 
 /*Fin du style de la feuille de contact*/
 
@@ -292,6 +303,26 @@ input[type=submit]:hover {
     width: auto;
   }
 }
+
+/* CAROUSEL D'ACCUEIL */
+
+.filtercar {
+        filter: brightness(50%);
+        -webkit-filter: brightness(50%);
+        -moz-filter: brightness(50%);
+        -o-filter: brightness(50%);
+        -ms-filter: brightness(50%);
+}
+
+/* QUI SOMMES-NOUS ? */
+
+.qsn {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.carioca {
+  text-align: center;
 
 /* fin partie Adrien     */
 
