changement de couleur du bouton achat

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,30 @@ input[type=submit]:hover {
 .Abutton:hover {
   background-color: #282727;
 }
+
+.Bbutton {
+  /* On signale que l'on ne veut pas de bordure */
+  border: none;
+  /* On donne la forme du boutton */
+  padding: 6px 6px;
+  /* On arrondie les bords */
+  border-radius: 8px;
+  /* On ajoute une ombre */
+  box-shadow: 2px 2px 6px #999;
+  /* On lui signale que le fond est noir */
+  background: #000000;
+  /* On lui dit que l'écriture est en gras */
+  font: bold 13px;
+  /* On lui dit que les lettres sont en blanc */
+  color: #FFF;
+  /* On indique quel type de cursor on veut lorsqu'on le survol */
+  cursor: pointer;
+}
+
+.Bbutton:hover {
+  background-color: #30ace7;
+}
+
 /* GESTION DES MEDIAS */
 
 /* Sur téléphonne */
